Fix space between cards on mobile display (Find Out)

--- a/app/assets/stylesheets/refinery/find_out.scss
+++ b/app/assets/stylesheets/refinery/find_out.scss
@@ -201,7 +201,7 @@
         margin: 0 2.5rem 5rem 0;
         //width: 23.95rem;
         @media screen and (max-width: 414px){
-          margin: 0 0.5rem 5rem .5rem;
+          margin: 0 0.5rem 0.5rem .5rem;
         }
 
 
@@ -212,7 +212,7 @@
           width: 100%;
 
           @media screen and (max-width: 414px){
-            height: 35%;
+            height: 6rem;
           }
         }
 
